[package]
name = "orderbooks-tcp-shared"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-tcp-sockets = { tag = "0.1.7", git = "https://github.com/MyJetTools/my-tcp-sockets.git", features = [
    "serialize_as_ref",
    "statefull_serializer",
] }
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
async-trait = "*"
chrono = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
